--- a/source/site.css
+++ b/source/site.css
@@ -45,6 +45,14 @@ a:visited {
 #body {
   line-height: 1.4;
 }
+#rebuilding {
+  margin: 0;
+  margin-bottom: 2em;
+}
+#rebuilding,
+#rebuilding a {
+  color: #bfe3d5;
+}
 #body {
   padding-bottom: 3em;
 }
