Allow the branding to wrap on small devices

--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -17,7 +17,7 @@
 
   <div id='global'>
     <div id='branding'>
-      <h1>marknormanfrancis.com</h1>
+      <h1>mark<wbr>norman<wbr>francis<wbr>.com</h1>
     </div>
 
     {% block global_rebuilding %}
