--- a/source/site.css
+++ b/source/site.css
@@ -82,6 +82,7 @@ body.about #body p img {
 body.about #body h2 {
   clear: right;
 }
+body.tweet #body p.image img,
 body.instagram #body p.image img {
   max-width: 100%;
 }
@@ -104,6 +105,46 @@ body.instagram #body p.image img {
 }
 #body_about a {
   color: #000;
+}
+
+main header {
+  display: grid;
+  grid-template-areas: 'meta' 'h1';
+  color: #5c7178;
+}
+main header a {
+  color: #33484f;
+}
+main header a:visited {
+  color: #1e333a;
+}
+
+main header h1 {
+  grid-area: h1;
+  color: #33484f;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+main header dl {
+  font-size: 14px;
+  grid-area: meta;
+}
+main header dt {
+  min-width: 100px;
+  margin-right: 20px;
+  font-weight: bold;
+  float: left;
+  clear: both;
+}
+main header dd {
+  margin: 0;
+}
+main header dd.tag {
+  display: inline-block;
+}
+main header dd.tag + dd.tag:before {
+  content: '·';
+  padding: 0 5px 0 2px;
 }
 
 @media only screen and (max-width: 600px) {
