--- a/templates/_fragment/article_header.html
+++ b/templates/_fragment/article_header.html
@@ -1,12 +1,11 @@
 <header>
   <h1>{{title}}</h1>
+  <p class='published'>
+    {{published.strftime('%A %d %B, %Y')}}
+      at 
+    {{published.strftime('%-I.%M%p').lower()}}
+  </p>
   <dl>
-    <dt>published</dt>
-    <dd>
-      {{published.strftime('%A %d %B, %Y')}}
-        at 
-      {{published.strftime('%-I.%M%p').lower()}}
-    </dd>
     {% if updated %}
       <dt>updated</dt>
       <dd>
