--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,7 +8,7 @@
 
 {% block body %}
 
-  <div id='body_about'>
+  <div id='body_rebuilding'>
     <strong>Please hold…</strong>
     <span>
       This website is being rebuilt,
