--- a/sass/_main_header.scss
+++ b/sass/_main_header.scss
@@ -31,6 +31,7 @@ main header {
     h1 {
         margin: 0;
         margin-top: 0.5em;
+        font-size: 2em;
     }
     p.published {
         margin-top: 0;
