Changes because of flourish 0.8alpha
Flourish changed how it handles paths in `generate.py`, renames
the `url()` template function to `path()` and provides calendar-based
and Sass generators as standard.

--- a/templates/_fragment/article_header.html
+++ b/templates/_fragment/article_header.html
@@ -18,7 +18,7 @@
       <li>
         <dt class='tag'>tagged</dt>
         {% for t in tag %}
-          <dd class='tag'><a href='{{ url("tags-tag-index", tag=t) }}'>{{t}}</a></dd>
+          <dd class='tag'><a href='{{ path("tags-tag-index", tag=t) }}'>{{t}}</a></dd>
         {% endfor %}
       </li>
     {% endif %}
