--- a/templates/calendar_day.html
+++ b/templates/calendar_day.html
@@ -3,11 +3,11 @@
 {% block head_title_text %}Entries for {{pages[0].published.strftime('%d %B %Y')}}{% endblock %}
 
 {% block body %}
-  <h1>Entries for {{pages[0].published.strftime('%d %B %Y')}}</h1>
+  <h1>Entries for {{day.strftime('%A, %d %B %Y')}}</h1>
   <ul>
     {% for page in pages %}
       <li>
-        {{page.published.strftime('%H:%M:%S')}} <a href='{{page.url}}'>{{page.title}}</a>
+        {{page.published.strftime('%H:%M:%S')}} <a href='{{page.path}}'>{{page.title}}</a>
       </li>
     {% endfor %}
   </ul>
