--- a/templates/calendar_year.html
+++ b/templates/calendar_year.html
@@ -3,7 +3,7 @@
 {% block head_title_text %}Entries for {{pages[0].published.year}}{% endblock %}
 
 {% block body %}
-  <h1>Entries for {{pages[0].published.year}}</h1>
+  <h1>Entries for {{year.year}}</h1>
   {% for page in pages %}
 
     {% if loop.changed(page.published.month) %}
@@ -12,13 +12,13 @@
         </ul>
       {% endif %}
         <li>
-          <h2><a href='{{ url("month-index", year=page.published.strftime("%Y"), month=page.published.strftime("%m")) }}'>{{page.published.strftime('%B')}}</a></h2>
+          <h2><a href='{{ path("month-index", year=page.published.strftime("%Y"), month=page.published.strftime("%m")) }}'>{{page.published.strftime('%B')}}</a></h2>
           <ul>
     {% endif %}
 
           <li>
             {{page.published.day}}{{page.published.day|ordinal}}
-            {{page.published.strftime('%H:%M')}} <a href='{{page.url}}'>{{page.title}}</a>
+            {{page.published.strftime('%H:%M')}} <a href='{{page.path}}'>{{page.title}}</a>
           </li>
   
     {% if loop.last %}
@@ -27,4 +27,5 @@
     {% endif %}
 
   {% endfor %}
+
 {% endblock %}
