Display locations on Instagram posts

--- a/templates/_fragment/article_header.html
+++ b/templates/_fragment/article_header.html
@@ -46,5 +46,11 @@
         <dd>{{favourites}}</dd>
       {% endif %}
     {% endif %}
+    {% if source == 'instagram' %}
+      {% if location %}
+        <dt>location</dt>
+        <dd>{{location}}</dd>
+      {% endif %}
+    {% endif %}
   </dl>
 </header>
