--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -48,5 +48,5 @@
         </ul>
       </li>
 
-  <p>There are <a href='/archives'>{{pages.count}}</a> total entries.</p>
+  <p>There are <a href='/archives'>{{pages.count()}}</a> total entries.</p>
 {% endblock %}
