Foursquare venue text was the wrong font

--- a/sass/pages/_foursquare.scss
+++ b/sass/pages/_foursquare.scss
@@ -9,6 +9,7 @@ body.foursquare {
         }
 
         figcaption {
+            @include body_font;
             @include small_body_font;
             color: $nevada;
             text-align: right;
