Fetch public YouTube channel uploads

--- a/fragments/all/all/base_article/article_header.html
+++ b/fragments/all/all/base_article/article_header.html
@@ -72,5 +72,11 @@
         {% endfor %}
       {% endif %}
     {% endif %}
+    {% if type == 'youtube' %}
+      <dt>views</dt><dd>{{views}}</dd>
+      <dt>likes</dt><dd>{{likes}}</dd>
+      <dt>dislikes</dt><dd>{{dislikes}}</dd>
+      <dt>comments</dt><dd>{{comments}}</dd>
+    {% endif %}
   </dl>
 </header>
