--- a/fragments/default/head.html
+++ b/fragments/default/head.html
@@ -1,6 +1,7 @@
 <head>
 [[ sectile insert head_charset.html ]]
 [[ sectile insert head_viewport.html ]]
+[[ sectile insert head_canonical.html ]]
 [[ sectile insert head_title.html  ]]
 [[ sectile insert head_css.html ]]
 </head>
