Link the "source" header on gif entries

--- a/fragments/all/all/base_article/article_header.html
+++ b/fragments/all/all/base_article/article_header.html
@@ -41,6 +41,8 @@
           {% endif %}
         {% elif source == 'instagram' %}
           Originally posted to Instagram
+        {% elif source_url %}
+          <a href='{{source_url}}'>{{source}}</a>
         {% else %}
           {{source}}
         {% endif %}
