--- a/fragments/default/body_footer.html
+++ b/fragments/default/body_footer.html
@@ -1,3 +1,3 @@
 <div id='footer'>
-  <p>Copyright © 2006–2020 Mark Norman Francis.</p>
+  <p>Copyright © {{global.publication_range}} Mark Norman Francis.</p>
 </div>
