--- a/fragments/source/youtube/all/body_source_body.html
+++ b/fragments/source/youtube/all/body_source_body.html
@@ -6,3 +6,5 @@
     allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen
 ></iframe>
+
+{{description|linebreaks|urlize}}
