--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -1,7 +1,9 @@
 // Page layout.
 
 $side_indent: 20px;
+$side_outdent: -20px;
 $side_indent_larger: 60px;
+$side_outdent_larger: -60px;
 
 @mixin larger_width {
     @media only screen and (min-width: 640px) {
