Store more original details for YouTube sources
Whilst I want "Published YouTube video..." to be the source's title,
it can be useful to have the original text without having to parse
it out of the source title.

Having the freedom to use thumbnail images of different sizes is
handy too.

--- a/fragments/source/youtube/all/body_source_body.html
+++ b/fragments/source/youtube/all/body_source_body.html
@@ -1,10 +1,10 @@
 <iframe
     width="560"
     height="315"
-    src="https://www.youtube-nocookie.com/embed/{{video_id}}"
+    src="https://www.youtube-nocookie.com/embed/{{youtube.id}}"
     frameborder="0"
     allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen
 ></iframe>
 
-{{description|linebreaks|urlise}}
+{{youtube.description|linebreaks|urlise}}
