--- a/fragments/all/youtube/all/body_body_header_origin.html
+++ b/fragments/all/youtube/all/body_body_header_origin.html
@@ -1,6 +1,6 @@
       <dt>source</dt>
       <dd>YouTube (<a href='{{origin_link_url}}'>{{origin_link_text}}</a>)</dd>
-      <dt>views</dt><dd>{{views}}</dd>
-      <dt>likes</dt><dd>{{likes}}</dd>
-      <dt>dislikes</dt><dd>{{dislikes}}</dd>
-      <dt>comments</dt><dd>{{comments}}</dd>
+      <dt>views</dt><dd>{{youtube.views}}</dd>
+      <dt>likes</dt><dd>{{youtube.likes}}</dd>
+      <dt>dislikes</dt><dd>{{youtube.dislikes}}</dd>
+      <dt>comments</dt><dd>{{youtube.comments}}</dd>
