--- a/fragments/default/body_masthead.html
+++ b/fragments/default/body_masthead.html
@@ -1,5 +1,9 @@
-<div id='masthead'>
-  <h1>mark<wbr>norman<wbr>francis<wbr>.com</h1>
-  [[ sectile insert body_masthead_rebuilding.html ]]
+<div id='masthead'><header>
+  <h1>
+    <span class='m'>mark</span
+      ><wbr><span class='n'>norman</span
+      ><wbr><span class='f'>francis</span
+      ><wbr><span class='dotcom'>.com</span>
+  </h1>
   [[ sectile insert body_masthead_navigation.html ]]
-</div>
+</header></div>
