--- a/sass/site.scss
+++ b/sass/site.scss
@@ -1,5 +1,5 @@
-@import "page";
 @import "colours";
+@import "page";
 @import "fonts";
 
 @import "masthead";
@@ -17,3 +17,4 @@
 @import "pages/foursquare";
 @import "pages/recipe";
 @import "pages/not_found";
+@import "pages/homepage";
