Make the rebuild message into an article

--- a/fragments/source/all/all/body_source_body.html
+++ b/fragments/source/all/all/body_source_body.html
@@ -1,1 +1,8 @@
+{% if updated_explanation %}
+  <div id='updated'>
+    <p><strong>Updated: {{updated.strftime('%d %B, %Y')}}:</strong></p>
+    {{updated_explanation|markdown}}
+  </div>
+{% endif %}
+
 {{body}}
