--- a/sass/site.scss
+++ b/sass/site.scss
@@ -16,5 +16,6 @@
 @import "pages/tweet";
 @import "pages/foursquare";
 @import "pages/recipe";
+@import "pages/source";
 @import "pages/not_found";
 @import "pages/homepage";
