--- a/fragments/not-found/all/all/body_body.html
+++ b/fragments/not-found/all/all/body_body.html
@@ -4,13 +4,15 @@
        alt='Sign for Exit 404 on an American highway.'>
 </div>
 
-<p>
-  That page doesn’t appear to exist. Sorry about that.
-  If you’ve found it by following a link in this site, you can shout at
-  <a href='https://twitter.com/cackhanded'>@cackhanded</a>.
-  It might make you feel better.
-</p>
-<p>
-  Otherwise, I guess use one of the main navigation links
-  at the start of the page to wander off.
-</p>
+<div id='text'>
+  <p>
+    That page doesn’t appear to exist. Sorry about that.
+    If you’ve found it by following a link in this site, you can shout at
+    <a href='https://twitter.com/cackhanded'>@cackhanded</a>.
+    It might make you feel better.
+  </p>
+  <p>
+    Otherwise, I guess use one of the main navigation links
+    at the start of the page to wander off.
+  </p>
+</div>
