Fix for recent Chrome rendering

--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -150,6 +150,7 @@
 
             a {
                 position: relative;
+                display: block;
                 font-size: 12px;
                 color: $desert_storm;
                 text-decoration: none;
