GIFs link on homepage was missing

--- a/fragments/homepage/all/all/body_body.html
+++ b/fragments/homepage/all/all/body_body.html
@@ -48,7 +48,8 @@
 <div id='gifs'>
   <h2><b>Latest GIFs — </b>I make GIFs, like it's <a href='https://www.theatlantic.com/technology/archive/2012/08/are-we-approaching-peak-gif/324460/'>2010</a>.</h2>
   <p>
-    You can read more about <a href='/'>the how and the why</a>.
+    You can read more about
+    <a href='/2021/06/07/history-of-my-gifs-site'>the history of them</a>.
   </p>
   <ol>
     {% for src in latest_gifs %}
