Allow subject indexes to have a splash image

--- a/fragments/index-page/all/all/body_body.html
+++ b/fragments/index-page/all/all/body_body.html
@@ -1,9 +1,4 @@
-[[ sectile insert body_body_header.html ]]
-
-<ul>
-  {% for page in pages %}
-    <li>
-      {{page.published.strftime('%H:%M:%S')}} <a href='{{page.path}}'>{{page.title}}</a>
-    </li>
-  {% endfor %}
-</ul>
+<main>
+  [[ sectile insert body_body_header.html ]]
+  [[ sectile insert body_body_posts_index.html ]]
+</main>
