--- a/sass/pages/_not_found.scss
+++ b/sass/pages/_not_found.scss
@@ -22,7 +22,7 @@ body.not-found {
             font-size: 2em;
             font-size: 10vw;
             color: $desert_storm;
-            @include outline_text(2px);
+            @include outlined_text(2px);
         }
 
         img {
@@ -35,7 +35,7 @@ body.not-found {
             h1 {
                 font-size: 4em;
                 font-size: 10vw;
-                @include outline_text(5px);
+                @include outlined_text(5px);
             }
 
             img {
