Alter homepage intro wording and wrapping

--- a/fragments/homepage/all/all/body_body.html
+++ b/fragments/homepage/all/all/body_body.html
@@ -1,12 +1,13 @@
 {# FIXME 2021 hardcoded #}
 <p>
-  I'm Mark Norman Francis.
+  I'm Mark Norman Francis,
 
-  I am a software developer and development manager who builds things of and
-  for the internet.
+  a software developer and development manager
+  who builds things of and for the internet.
 
-  I use this website to collect my thoughts and ideas, and to collect 
-  the parts of me that I leave lying around on other parts of the internet.
+  I use this website to collect my thoughts and ideas,
+  and to collect the parts of me
+  that I leave lying around on other sites on the internet.
 </p>
 
 {% if fixmes %}
