--- a/sass/pages/_source.scss
+++ b/sass/pages/_source.scss
@@ -1,6 +1,18 @@
 // generator:source page
 
 body.source {
+    #fixme {
+        outline: 5px solid red;
+        border: 5px solid orange;
+        background: #ffc;
+        padding: 10px;
+        margin-top: 2em;
+
+        h2 {
+            margin-top: 0;
+        }
+    }
+
     figure img,
     p.image img {
         max-width: 100%;
