Show the dates of the ISO week in weenotes

--- a/fragments/source/all/all/body_body_header.html
+++ b/fragments/source/all/all/body_body_header.html
@@ -5,6 +5,7 @@
       at
     {{published.strftime('%-I.%M%p').lower()}}
   </p>
+  [[ sectile insert body_body_header_isoweek.html ]]
   <dl>
     [[ sectile insert body_body_header_origin.html ]]
     {% if tag %}
