Add an Atom feed of only new writings
This is a feed for anyone who wants to follow only the things I write
about on the site itself (rather than all of the other syndicated or
auto-generated content).

--- a/fragments/default/head.html
+++ b/fragments/default/head.html
@@ -2,6 +2,7 @@
 [[ sectile insert head_charset.html ]]
 [[ sectile insert head_viewport.html ]]
 [[ sectile insert head_canonical.html ]]
+[[ sectile insert head_atom_feed.html ]]
 [[ sectile insert head_title.html  ]]
 [[ sectile insert head_css.html ]]
 </head>
