Add a firehose feed
For anyone who really does want every new piece of content on the
site to show up in their feed reader.

--- a/fragments/default/head_atom_feed.html
+++ b/fragments/default/head_atom_feed.html
@@ -1,1 +1,2 @@
 <link rel='alternate' type='application/atom+xml' title='marknormanfrancis.com articles' href='/index.atom'>
+<link rel='alternate' type='application/atom+xml' title='marknormanfrancis.com firehose' href='/firehose.atom'>
